--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ jobs:
         uses: actions/checkout@v2
       - name: Fetch num squared
         id: get_square
-        uses: ./
+        uses: ./git_action_practice
         with:
           num: 11
       - name: Print the square
