--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+        with:
+          actions/checkout Default: ${{ github.repository }}
       - name: Fetch num squared
         id: get_square
         uses: ./action.yaml
