--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,14 +4,16 @@ on: [push]
 jobs:
   get-num-square:
     runs-on: ubuntu-latest
-    name: Returns the num square
+    name: Returns the number square
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2
       - name: Fetch num squared
         id: get_square
-        uses: ./action.yaml
+        uses: ./ # Uses an action in the root directory
+        # or use a released GitHub Action
+        # uses: shipyard/github-action/fetch-shipyard-env@1.0.0
         with:
           num: 11
       - name: Print the square
-        run: echo "${{ steps.get_square.outputs.num_squared}}"
+        run: echo "${{ steps.get_square.outputs.num_squared }}"
